--- a/client/src/css/authmodal.css
+++ b/client/src/css/authmodal.css
@@ -1,9 +1,8 @@
-
-.auth-modal{
+.auth-modal {
     position: absolute;
     left: 0;
     right: 0;
-    top: 50px;
+    top: 150px; /* Increased from 50px to 150px */
     margin-left: auto;
     margin-right: auto;
     max-width: 360px;
@@ -11,10 +10,10 @@
     background-color: rgb(149, 153, 154);
     border-radius: 10px;
     padding: 40px;
-    cursor:pointer ;
+    cursor: default; /* Changed from pointer to default */
 }
 
-.submit-btn{
+.submit-btn {
     color: rgb(121, 119, 119);
     background-color: rgb(225, 225, 225);
     font-weight: 500;
@@ -24,23 +23,28 @@
     border-radius: 30px;
     border: solid 2px rgb(121, 119, 119);
     margin: 6px;
+    cursor: pointer; /* Added cursor: pointer for the button */
 }
-.submit-btn:hover{
+
+.submit-btn:hover {
     color: rgb(93, 90, 90);
     background-color: rgb(198, 189, 189);
 }
 
-.close-btn{
+.close-btn {
     float: right;
+    cursor: pointer; /* Added cursor: pointer for the close button */
+    font-size: 20px; /* Increased font size for better visibility */
+    padding: 5px 10px; /* Added some padding for a larger click area */
 }
 
-.auth-modal form{
-     display: flex;
-     flex-direction: column;
+.auth-modal form {
+    display: flex;
+    flex-direction: column;
 }
 
 .auth-modal input[type=email],
-.auth-modal input[type=password]{
+.auth-modal input[type=password] {
     padding: 8px;
     margin: 8px;
     font-size: 17px;
